@@ -2,7 +2,10 @@
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 - Fixed issue #10937: ezcDbHandler::hasFeature() is not implemented properly
   anywhere.
-- Fixed issue #10943: Add parameter to specify type of value in bindValue() and bindParam()
+- Fixed issue #10943: Add parameter to specify type of value in bindValue() 
+  and bindParam()
+- Fixed issue #010884: Database: Limit in Oracle only works with 1000 elements
+  at maximum
 
 
 1.3beta2 - Thursday 31 May 2007
